<resources>
    <string name="app_name">Qvid19</string>

    <string name="Question1">Where did covid 19 originate from?</string>
    <string name="Question_one_option_one">Brazil</string>
    <string name="Question_one_option_two">USA</string>
    <string name="Question_one_option_three">China</string>


    <string name="Question2">One of these is not a major symptom of covid 19</string>
    <string name="Question_two_option_one">Fever</string>
    <string name="Question_two_option_two">Diarrhoea</string>
    <string name="Question_two_option_three">Dry cough</string>

    <string name="Question3">What should you do if you feel covid 19 symptoms? </string>
    <string name="Question_three_option_one">Cry for help</string>
    <string name="Question_three_option_two">Panic</string>
    <string name="Question_three_option_three">Stay calm and self isolate</string>

    <string name="Question4">Which of these is not a way to prevent Covid 19 infection?</string>
    <string name="Question_four_option_one">Wash hands regularly</string>
    <string name="Question_four_option_two">Maintain safe distance</string>
    <string name="Question_four_option_three">Go out without face masks</string>


    <string name="Question5">What should you do if you feel the major symptoms of covid 19?</string>
    <string name="Question_five_option_one">Chill at home</string>
    <string name="Question_five_option_two">Drink chloroquine</string>
    <string name="Question_five_option_three">Seek medical attention</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="prevention_header">Prevention</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>

    <string name="hello_blank_fragment">Hello</string>
    <string name="qvid_19">QVID \'19</string>
    <string name="description">QVID \'19 is a quiz app about the dreaded pandemic named corona virus which started in China and spread around the world</string>
    <string name="read_more">Read more...</string>
    <string name="take_quiz">Take Quiz</string>
    <string name="white_background">White background</string>
    <string name="covid_image">Covid Image</string>
    <string name="treatments_Header">Treatments</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hooray_fragment_header">Hurray!</string>
    <string name="congratulations_image">Congratulations Image</string>

    <string name="signs_prev">Previous</string>
    <string name="signs_next">Next</string>
    <string name="symptoms_title">Signs and Symptoms</string>
    <string name="signs">"COVID-19 affects different people in different ways. Most infected people will develop mild to moderate illness and recover without hospitalization.\n\n"
    "Most common symptoms:\n"
    1. "fever\n"
    2."dry cough\n"
    3."tiredness\n\n"
    "Less common symptoms:\n"
    1."aches and pains\n"
    2."sore throat\n"
    3."diarrhoea\n"
    4."conjunctivitis\n"
    5."headache\n"
    6."loss of taste or smell\n"
    7."a rash on skin, or discolouration of fingers or toes"
    </string>
    <string name="score">Score :</string>
    <string name="q4">Q4</string>
    <string name="about_covid">What is COVID19?</string>

    <string name="result_frag_image">Congrats Ribbon</string>
    <string name="result_text_congrats1">Congrats!</string>
    <string name="result_text_congrats2">You answered all questions.</string>
    <string name="result_score_text">score: </string>
    <string name="result_button">Retake Quiz Again</string>
    <string name="q3">Q3</string>
    <string name="q5">Q5</string>


</resources>