<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_ish">


        <ImageView
            android:id="@+id/whiteBGImageView"
            android:layout_width="0dp"
            android:layout_height="480dp"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/white_background"
            android:src="@drawable/white_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/covidImage" />

        <ImageView
            android:id="@+id/covidImage"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/covidimage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/covid_image" />

        <TextView
            android:id="@+id/headingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_vertical"
            android:text="@string/qvid_19"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/whiteBGImageView"
            app:layout_constraintTop_toTopOf="@+id/whiteBGImageView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="12sp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/description"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/whiteBGImageView"
            app:layout_constraintStart_toStartOf="@+id/whiteBGImageView"
            app:layout_constraintTop_toBottomOf="@+id/headingTextView" />

        <Button
            android:id="@+id/readMoreButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/green_rounded_corners"
            android:text="@string/read_more"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

        <Button
            android:id="@+id/takeQuizButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/purple_rounded_corners"
            android:text="@string/take_quiz"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/readMoreButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>