<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_ish">


        <TextView
            android:id="@+id/result_text_congrats1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:fontFamily="serif"
            android:text="@string/result_text_congrats1"
            android:textAlignment="center"
            android:textColor="@color/whitish"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_text_congrats2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="serif"
            android:text="@string/result_text_congrats2"
            android:textAlignment="center"
            android:textColor="@color/whitish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_text_congrats1" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="229dp"
            android:layout_height="188dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/result_frag_image"
            android:src="@drawable/ribbon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_text_congrats2" />

        <TextView
            android:id="@+id/result_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:text="@string/result_score_text"
            android:textColor="@color/greenish"
            app:chainUseRtl="false"
            app:layout_constraintEnd_toStartOf="@+id/result_score_number"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_image" />

        <TextView
            android:id="@+id/result_score_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:textAlignment="center"
            android:textColor="@color/whitish"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/result_score_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/result_score_text"
            app:layout_constraintTop_toTopOf="@+id/result_score_text"
            tools:text="00" />

        <Button
            android:id="@+id/result_frag_button"
            android:layout_width="189dp"
            android:layout_height="48dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/white_border"
            android:text="@string/result_button"
            android:textAllCaps="false"
            android:textColor="@color/whitish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_score_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>