<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.TreatmentsFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/treatmentsFragmentHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="sans-serif"
            android:text="@string/treatments_Header"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/treatmentsFragmentHeaderScrollView"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/treatmentsFragmentHeader">


            <TextView
                android:id="@+id/treatments_fragment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.5"
                android:padding="16dp"
                android:textColor="#333333"
                android:text=""
                android:textStyle="normal"
                app:lineHeight="20sp"/>
        </ScrollView>

        <Button
            android:id="@+id/treatments_fragment_previous_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/green_border"
            android:text="@string/previous_button"
            android:textAllCaps="false"
            android:textColor="@color/greenish"
            app:layout_constraintTop_toBottomOf="@id/treatmentsFragmentHeaderScrollView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/treatments_fragment_next_button"/>

        <Button
            android:id="@+id/treatments_fragment_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            android:background="@drawable/purple_border"
            android:textAllCaps="false"
            android:textColor="@color/purple_ish"
            android:layout_marginStart="110dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@id/treatmentsFragmentHeaderScrollView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/treatments_fragment_previous_button"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>